--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
+
+# General (OS-specific)
+[Dd]esktop.ini
+.DS_Store
+
+# General
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
